# rds-sync

./: .gitignore  Cargo.toml  go.mod  main.go  rds-stats-sink.go
raw-http-requests/: websocket-client-handshake.http
src/: main.rs
src/config/: mod.rs
src/rcon/: mod.rs
src/sync/: mod.rs
